--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.massiel.ws">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher" android:theme="@style/AppTheme">
+
+
         <activity android:name=".VistaUsuario">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
